added dashboard controller
